compiler/test/parse-err/undefined-var.gr
// RUN: graphalg-translate --import-graphalg --verify-diagnostics %s

func UndefinedVar() -> int {
    // expected-error@below{{unrecognized variable}}
    return i_am_undefined;
}
